--- a/Fin Control/index.html
+++ b/Fin Control/index.html
@@ -67,6 +67,7 @@
                 <ul>
                     <li><a href="#" class="active" data-tab="dashboard"><i class="fas fa-chart-pie"></i> Dashboard</a></li>
                     <li><a href="#" data-tab="transactions"><i class="fas fa-exchange-alt"></i> Transacciones</a></li>
+                    <li><a href="#" data-tab="subject"><i class="fas fa-user-tag"></i> Sujeto</a></li>
                     <li><a href="#" data-tab="categories"><i class="fas fa-tags"></i> Categorías</a></li>
                     <li><a href="#" data-tab="scanner"><i class="fas fa-camera"></i> Escanear</a></li>
                     <li><a href="#" data-tab="forecast"><i class="fas fa-chart-line"></i> Previsión</a></li>
@@ -95,6 +96,7 @@
     <script src="js/family-manager.js"></script>
     <script src="js/categories-analysis.js"></script>
     <script src="js/transactions.js?v=2"></script>
+    <script src="js/subject.js"></script>
     <script src="js/pdf-parser.js"></script>
     <script src="js/modal-fallback.js"></script>
     <script src="js/ocr.js"></script>
